--- a/Cpp Primer Learning/Cpp Primer Learning.vcxproj.filters
+++ b/Cpp Primer Learning/Cpp Primer Learning.vcxproj.filters
@@ -24,12 +24,18 @@
     <ClInclude Include="targetver.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="EX1.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="Cpp Primer Learning.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="EX1.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
